--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/3061/3061214.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Dosis&family=Noto+Sans&family=Teko&display=swap"
       rel="stylesheet">
 
-    <title>React App</title>
+    <title>Portfolio Nacho Hardoy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
